[build-system]
requires = ["build", "setuptools-scm"]

[project]
dynamic = ["version"]
name = "dsss"
description = "Dead-Simple SDMX Server"
authors = [{ name = "dsss contributors" }]
maintainers = [
  { name = "Paul Natsuo Kishimoto", email = "mail@paul.kishimoto.name" },
]
readme = "README.rst"
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "sdmx1 >= 2.14.0",
    "starlette",
]

[project.optional-dependencies]
tests = [
  "pytest >= 8",
  "pytest-cov",
  "sdmx1[tests]",  # for Jinja2
  "starlette[full]",  # for httpx
]

[project.urls]
homepage = "https://github.com/khaeru/dsss"

[[tool.mypy.overrides]]
# Packages for which no type hints are available
module = ["google.cloud"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["C9", "E", "F", "I", "W"]
mccabe.max-complexity = 10

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
