[metadata]
name = dsss
author = dsss contributors
author_email = mail@paul.kishimoto.name
maintainer = Paul Natsuo Kishimoto
maintainer_email = mail@paul.kishimoto.name
license = GPLv3
description = Dead Simple SDMX Server
long_description = file:README.rst
url = https://github.com/khaeru/dsss

[options]
packages = dsss
# For importlib in __init__
python_requires = >=3.8
install_requires =
    flask
    flask-caching
    sdmx1
    setuptools >= 41
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.entry_points]
console_scripts =
    dsss = dsss:demo


[isort]
profile = black

[flake8]
max-line-length = 88

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940
